MB-35631: Read vbstate from disk in initScanContext

We should not read the vbucket state from cache when creating a
ScanContext as the cached value may be ahead.

Change-Id: Ia991218251cbeff6aa5c47c17af5ea2176e68b45
Reviewed-on: http://review.couchbase.org/113698
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>